force-app/main/default/objects/ucinn_portal_Event_Waitlist_Entry__c/ucinn_portal_Event_Waitlist_Entry__c.object-meta.xml
<CustomObject>
    <label>Event Waitlist Entry</label>
    <nameField>
        <label>Event Waitlist Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Waitlist Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>