force-app/main/default/objects/ucinn_portal_Event_Waitlist_Entry__c/fields/Expiration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_Time__c</fullName>
    <label>Expiration Date/Time</label>
    <type>DateTime</type>
</CustomField>