force-app/main/default/objects/ucinn_portal_Event_Waitlist_Entry__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <formula>Ticket_Type__r.Listing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing</label>
    <type>Text</type>
</CustomField>