force-app/main/default/objects/ucinn_portal_Event_Waitlist_Entry__c/fields/Number_of_Tickets_Available__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tickets_Available__c</fullName>
    <label>Number of Tickets Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>