force-app/main/default/objects/ucinn_portal_Event_Waitlist_Entry__c/fields/Ticket_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type_Name__c</fullName>
    <formula>Ticket_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Type Name</label>
    <type>Text</type>
</CustomField>